# fumadocs-python-autodoc

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/example/: README.md  fumapy.config.ts  next.config.mjs  package.json  pyproject.toml
apps/example/app/: global.css  layout.config.tsx  layout.tsx
apps/example/app/(apidocs)/[...slug]/: layout.tsx  page.tsx
apps/example/app/(home)/: layout.tsx
apps/example/lib/: autodocSources.ts  bamboost.json
python/: README.md  pyproject.toml
python/fumadocs_autodoc/: __init__.py
python/fumadocs_autodoc/mksource/: document_module.py  json_encoder.py  models.py  simplify_docstring.py
