[project]
name = "fumadocs-autodoc"
version = "0.0.2"
description = "Extract API documentation from source code and docstrings. For the python API extension for FumaDocs."
readme = "README.md"
authors = [
    { name = "zrlf", email = "florez@ethz.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "griffe>=1.11",
]

[project.scripts]
fumadocs-autodoc = "fumadocs_autodoc:generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
